--- a/radar-demo/pages/ports.html
+++ b/radar-demo/pages/ports.html
@@ -3,16 +3,13 @@
     <head>
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-        <!-- <meta http-equiv="Content-Security-Policy" content="default-src 'self' http://10.0.0.33" /> -->
 
         <title>Radar</title>
+
+        <script src="../app.js"></script>
+
         <link rel="icon" href="../assets/favicon.svg" type="image/x-icon" />
-
-        <script type="module" src="../app.js"></script>
-
         <link rel="stylesheet" href="../style.css" />
-        <link rel="manifest" href="../manifest.json" />
-
         <link href="https://fonts.googleapis.com/css?family=Inter" rel="stylesheet" />
     </head>
     <body>
